<resources>
    <string name="app_name">Dictionary</string>

    <string name="language">Language</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="choose">Choose Language</string>
    <string name="persian">فارسی</string>
    <string name="english">English</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="word">word</string>
    <string name="definition">Definition</string>
    <string name="new_word">New word</string>
    <string name="english_char" translatable="false">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="just_english">Just English</string>
    <string name="just_persian">Just Persian</string>
    <string name="word_empty">Word box should be fill</string>
    <string name="definition_empty">Definition box should be fill</string>
    <string name="word_successfully_added">Word successfully added.</string>
    <string name="delete">Delete</string>
    <string name="sure_to_delete_item">Are you sure to delete item?</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_word">Edit Word</string>
    <string name="fa" translatable="false">FA</string>
    <string name="en" translatable="false">EN</string>
    <string name="add_word">Add Word</string>
    <string name="copy_database">Copy Database</string>
    <string name="import_question">Do you want to import Database?</string>
    <string name="loading">Loading</string>
    <string name="database_manager">Database Manager</string>
    <string name="reset">Reset</string>
    <string name="remove_database">Remove Database</string>
    <string name="sure_delete_reset">Are you sure to %s the database?</string>
    <string name="share_a_word">Share a word</string>
    <string name="french" translatable="false">French</string>
    <string name="arabic" translatable="false">عربی</string>
    <string name="word_count">Words:</string>
</resources>