<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:title="@string/more"
        app:showAsAction="always"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_more">

        <menu>
            <item
                android:title="@string/add_word"
                android:id="@+id/menuAddWord"
                app:showAsAction="never"/>

            <item
                android:title="@string/language"
                android:id="@+id/menuLanguage"
                app:showAsAction="never"/>

            <item
                android:title="@string/database_manager"
                android:id="@+id/menuDatabaseManager"
                app:showAsAction="never">

                <menu>
                    <item
                        android:title="@string/reset"
                        android:id="@+id/menuReset"
                        app:showAsAction="never"/>
                    <item
                        android:title="@string/remove_database"
                        android:id="@+id/menuRemoveDatabase"
                        app:showAsAction="never"/>
                </menu>
            </item>

            <item
                android:title="@string/exit"
                android:id="@+id/menuExit"
                app:showAsAction="never"/>

        </menu>


    </item>



</menu>